# runaire

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  commands.local.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/runaire-agent/: Cargo.toml
crates/runaire-agent/src/: main.rs
crates/runaire-cli/: Cargo.toml
crates/runaire-cli/examples/: gen_completions.rs
crates/runaire-cli/src/: agent.rs  cli.rs  exit.rs  format.rs  lib.rs  main.rs  prompt.rs
crates/runaire-cli/src/commands/: completions.rs  entry.rs  gen.rs  mod.rs  ssh.rs  sync.rs  vault.rs
crates/runaire-cli/src/views/: entry.rs  gen.rs  mod.rs  vault.rs
crates/runaire-cli/tests/: cli_clipboard_handoff.rs  cli_completions.rs  cli_entry.rs  cli_exit_codes.rs  cli_gen.rs  cli_help.rs  cli_json_schemas.rs  cli_master_password.rs  cli_vault.rs
crates/runaire-cli/tests/common/: mod.rs
crates/runaire-core/: Cargo.toml
crates/runaire-core/benches/: bench_search.rs  vault_open.rs
crates/runaire-core/src/: atomic.rs  error.rs  lib.rs  locking.rs  paths.rs  registry.rs  secret.rs  unlock.rs  vault.rs
crates/runaire-core/src/entry/: attachment.rs  builder.rs  crud.rs  expiration.rs  group.rs  mod.rs  search.rs  totp.rs  types.rs  view.rs
crates/runaire-core/tests/: fixtures_smoke.rs  keepassxc_smoke.rs  random_round_trip.rs  test_env_smoke.rs  us_001_create_vault.rs  us_002_refuse_overwrite.rs  us_003_open_correct_password.rs  us_004_open_wrong_password.rs  us_005_multiple_vaults.rs  us_006_change_master_password.rs  us_007_delete_registration.rs  us_010_add_credential.rs  us_011_uuid_stable.rs  us_012_totp_entry.rs  us_013_attachment.rs  us_014_edit_preserves_history.rs  us_015_search.rs  us_016_groups.rs  us_017_delete_entry.rs  us_018_expired_entries.rs  us_054_atomic_write_fault_injection.rs  us_055_concurrent_writers.rs  vault_api_additions.rs
crates/runaire-core/tests/common/: entry_fixtures.rs  mod.rs
crates/runaire-core/tests/fixtures/: malformed.toml  v1_registry.toml  v99_registry.toml
crates/runaire-genpw/: Cargo.toml
crates/runaire-genpw/LICENSES/: EFF-wordlist.md
crates/runaire-genpw/src/: charset.rs  error.rs  lib.rs  passphrase.rs  password.rs  sampling.rs  wordlist.rs
crates/runaire-genpw/tests/: distribution.rs  us_020_random_default.rs  us_021_random_custom.rs  us_022_no_ambiguous.rs  us_023_diceware.rs
crates/runaire-genpw/tests/common/: mod.rs
crates/runaire-security/: Cargo.toml
crates/runaire-security/src/: auto_lock.rs  clipboard.rs  clock.rs  error.rs  lib.rs  secret.rs  vault_lock.rs
crates/runaire-security/src/os_events/: logind.rs  macos.rs  mod.rs  noop.rs  sigstop.rs
crates/runaire-security/tests/: us_051_idle_auto_lock.rs  us_052_post_mvp_iokit.rs  us_052_post_mvp_logind.rs  us_052_sigstop_lock.rs  us_053_clipboard_autoclear.rs
crates/runaire-security/tests/common/: clock.rs  mod.rs  signals.rs
crates/runaire-security/tests/fixtures/: vaults_minimal.toml  vaults_with_lock_override.toml
crates/runaire-sync/: Cargo.toml
crates/runaire-sync/src/: activity.rs  auth.rs  backup.rs  commit_message.rs  config.rs  error.rs  lib.rs  sync.rs
crates/runaire-sync/src/merge/: mod.rs
crates/runaire-sync/src/transport/: git.rs  mod.rs
crates/runaire-sync/tests/: merge_semantics.rs
crates/runaire-tui/: Cargo.toml
crates/runaire-tui/src/: main.rs
docs/benchmarks/: argon2id-tuning-2026-05.md
shell-completions/: _runaire  runaire.bash  runaire.fish
tools/bench/: bench_search_gate.sh
tools/dev/: install-toolchain.sh
tools/interop-tests/: README.md  entry_us-010.sh  entry_us-012.sh  entry_us-013.sh  entry_us-014.sh  entry_us-016.sh  entry_us-018.sh  us_090_rust_to_kpxc.sh  us_091_kpxc_to_rust.sh  us_092_round_trip.sh
tools/interop-tests/lib/: kpxc-diff.py
