[package]
name = "runaire-cli"
description = "Rùnaire one-shot CLI (placeholder; implemented by the cli-skeleton feature)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
