[package]
name = "runaire-tui"
description = "Rùnaire interactive terminal UI (placeholder; implemented by the tui-skeleton feature)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
